--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.3",
+    "@primeng/themes": "^20.0.1",
     "express": "^4.18.2",
+    "google-libphonenumber": "^3.2.34",
+    "intl-tel-input": "^25.3.1",
+    "ngx-bootstrap": "^12.0.0",
+    "ngx-intl-tel-input": "^17.0.0",
+    "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
