--- a/angular.json
+++ b/angular.json
@@ -68,8 +68,10 @@
                   "maximumError": "1mb"
                 }
               ],
-              
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "sourceMap": false,
+              "optimization": true,
+              "extractLicenses": true
             },
             "development": {
               "optimization": false,
