--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "google-libphonenumber": "^3.2.34",
     "intl-tel-input": "^25.3.1",
     "ngx-bootstrap": "^20.0.0",
+    "ngx-cookie-service": "^19.0.0",
     "ngx-intl-tel-input": "^17.0.0",
     "primeng": "^19.1.4",
     "rxjs": "~7.8.0",
